# substreams_module_repo

./: .gitignore  Cargo.toml  Literate.md  Literate.org  README.org  bayc_abi.json  build.rs  run.sh  rust-toolchain.toml  soulbound-modules-v0.1.0.spkg  substreams.yaml
.github/workflows/: release.yml
abis/: seaport.json
proto/: soulbound.proto
src/: abi_constants.rs  helpers.rs  helpers.rs.bak  lib.rs  lib.rs.bak  nft_helpers.rs  nft_helpers.rs.bak
src/abi/: blur.rs
src/pb/: eth.soulbound_modules.v1.rs  mod.rs  sf.substreams.entity.v1.rs  sf.substreams.sink.database.v1.rs  sf.substreams.v1.rs  soulbound_modules.v1.rs  test.soulbound_modules.v1.rs
