[package]
name = "soulbound-modules"
version = "0.1.0"
description = "A collection of substreams modules meant to make extracting data easy and fast. Built with <3 by SoulboundLabs"
edition = "2021"
#repository = "https://github.com/streamingfast/substreams-eth-block-meta"

[lib]
name = "soulbound_modules"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
prost = "0.11"
prost-types = "0.11"
substreams = "0.5"
substreams-ethereum = "0.9"
substreams-database-change = "1.0.0"
substreams-entity-change = "1.2"
chrono = { version = "0.4", features = [ "std" ], default-features = false }
sha3 = "0.10.8"
regex = "1.8.4"
fancy-regex = "0.11.0"
ethereum_abi = "0.4.0"
serde_json = "1.0.97"
primitive-types = "^0.11"
ipfsapi = "0.4.0"
reqwest = "0.11.18"
ehttp = "0.3.0"
async-ffi = { version = "0.4.1", features = ["macros"] }
async-std = "1.12.0"
wasm-bindgen = "0.2.87"
base58 = "0.2.0"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
